--- a/intermediate python/sec1/sec1.ipynb
+++ b/intermediate python/sec1/sec1.ipynb
@@ -1938,6 +1938,144 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 014. heapq는 얼마나 빠른가?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 015. 독스트링(Documentation string)으로 정확하고 빠르게 개발합시다.(PEP 257)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- PEP 257 전문 (https://www.python.org/dev/peps/pep-0257/)\n",
+    "- 객체를(클래스, 함수, 메서드, 모듈) 설명하는 한 문장을 가장 앞에 배치\n",
+    "- 큰 따옴표\n",
+    "- 예외 발생에 대한 상황과 설명"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def 제곱(수):\n",
+    "    \"\"\"입력된 값을 제곱하는 함수\"\"\"\n",
+    "    return 수**2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SearchTree:\n",
+    "    \"\"\"서비스의 검색속도 개선을 위한 검색 트리\"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#PEP 257 예제\n",
+    "def foo():\n",
+    "    \"\"\"\n",
+    "    This is the second line of the docstring.\n",
+    "    \"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'입력된 값을 제곱하는 함수'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "제곱.__doc__ # 이방식을 권고"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    This is the second line of the docstring.\\n    '"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "foo.__doc__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.제곱(수)>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "제곱 #shif + tab을 누르면 docstring이 나옴!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- docstring을 wiki처럼! - 스핑크스(https://www.sphinx-doc.org)\n",
+    "- 무려 Python의 공식홈페이지가 스핑크스로 만들어졌습니다!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
